# codex-acp-agent

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  acp.md  filesystem_acp.md  rust-toolchain.toml  test.md
.github/workflows/: ci.yml  release.yml
scripts/: stdio-smoke.sh
src/: agent.rs  lib.rs  logging.rs  main.rs  mcp_fs_server.rs  prompt_fs_guidance.md
src/agent/: client_ops.rs  commands.rs  config_builder.rs  context.rs  core.rs  events.rs  lifecycle.rs  mod.rs  modes.rs  prompt.rs  session.rs  sessions.rs  utils.rs
src/agent/tests/: mod.rs  modes_test.rs  reasoning_test.rs  session_modes_test.rs
src/fs/: bridge.rs  mcp_server.rs  mod.rs
