[package]
name = "codex-acp"
authors = ["<gawaine2111@gmail.com>"]
version = "0.1.2"
edition = "2024"
description = "ACP-compatible agent that bridges the OpenAI Codex runtime with ACP clients over stdio."
readme = "README.md"
# Match the pinned toolchain in rust-toolchain.toml
rust-version = "1.90"

[dependencies]
agent-client-protocol = { version = "0.4.3" }
anyhow = { version = "1.0.100" }
async-trait = { version = "0.1" }
codex-common = { git = "https://github.com/openai/codex", branch = "main", features = [
    "cli",
] }
codex-core = { git = "https://github.com/openai/codex", branch = "main" }
codex-protocol = { git = "https://github.com/openai/codex", branch = "main" }
tokio = { version = "1.47.1", features = [
    "macros",
    "rt",
    "time",
    "io-std",
    "io-util",
    "net",
    "process",
    "sync",
] }
tokio-util = { version = "0.7.16", features = ["compat"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
