[package]
name = "codex-acp"
authors = ["<gawaine2111@gmail.com>"]
version = "0.2.0"
edition = "2024"
description = "ACP-compatible agent that bridges the OpenAI Codex runtime with ACP clients over stdio."
readme = "README.md"
# Match the pinned toolchain in rust-toolchain.toml
rust-version = "1.90"

[dependencies]
agent-client-protocol = { version = "0.7.0", features = ["unstable"] }
anyhow = { version = "1.0.100" }
async-trait = { version = "0.1" }
codex-common = { git = "https://github.com/openai/codex", branch = "main", features = [
    "cli",
] }
codex-core = { git = "https://github.com/openai/codex", branch = "main" }
codex-protocol = { git = "https://github.com/openai/codex", branch = "main" }
codex-app-server-protocol = { git = "https://github.com/openai/codex", branch = "main" }
tokio = { version = "1.47.1", features = [
    "macros",
    "rt",
    "io-std",
    "io-util",
    "net",
    "sync",
] }
tokio-util = { version = "0.7.16", features = ["compat"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
serde = { version = "1.0", features = ["derive"] }
diffy = { version = "0.4.2" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
rmcp = { version = "0.8.3", features = [
    "transport-io",
    "server",
    "macros",
    "schemars",
] }
schemars = { version = "1", features = ["derive"] }
tracing-appender = { version = "0.2.3" }
